@@ -3,6 +3,8 @@ Stable versions
 
 4.6.1 (?):
 	Changes by Alice Rowan:
+	- Fix loading Imago Orpheus modules with null instrument magic
+	  strings, bidirectional samples, and disabled default panning.
 	- Faster IT loading by buffering pattern, sample, and comment reads.
 	- Fix loop detection edge cases broken by S3M/IT marker scan bugs.
 
